--- a/mysite/polls/templates/polls/results.html
+++ b/mysite/polls/templates/polls/results.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% load static %}
+
+<link rel="stylesheet" href="{% static 'polls/style.css' %}">
 <h1>{{ question.question_text }}</h1>
 
 <ul>
@@ -14,5 +10,3 @@
 </ul>
 
 <a href="{% url 'polls:detail' question.id %}">Vote again?</a>
-</body>
-</html>
